test/fail/id/duplicatedecl.java
class Test {
    void sing() {
        int x = 1;
        int x = 2;
    }
}
